packages/flark_core/native/comrak_bridge/include/flark_v4.h

typedef uint32_t FlarkV4StatusCode;
typedef uint32_t FlarkV4SessionState;
typedef uint64_t FlarkV4SessionHandle;
typedef uint64_t FlarkV4Revision;
typedef uint64_t FlarkV4ProgressToken;
typedef struct FlarkV4Outcome {
  uint32_t struct_size;
  uint32_t operation;
  uint32_t status;
  uint32_t progress_state;
  uint64_t primary_handle;
  uint64_t secondary_handle;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t progress_token;
  uint64_t required_bytes;
  uint64_t written_bytes;
  uint64_t detail_code;
  uint64_t reserved[4];
} FlarkV4Outcome;
typedef struct FlarkV4WorkBudget {
  uint64_t max_work_units;
  uint64_t advisory_max_micros;
  uint32_t max_result_items;
  uint32_t max_result_bytes;
} FlarkV4WorkBudget;
/* max_work_units must be nonzero on every request carrying this record.
 * QUERY_VIEWPORT and CONTINUATION_NEXT additionally require both result caps
 * to be nonzero. Every cap must remain within the negotiated maxima. */

typedef struct FlarkV4SessionRef {
  uint64_t session;
  uint64_t owner_token;
} FlarkV4SessionRef;
/* NEXT and RELEASE echo the exact nonzero revision, snapshot, and continuation
 * authority returned by the preceding result page. */

typedef struct FlarkV4AnchorRequest {
  uint32_t struct_size;
  uint32_t coordinate_kind;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t anchor;
  uint64_t position;
  uint32_t affinity;
  uint32_t reserved_u32;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
} FlarkV4AnchorRequest;
/* HISTORY_REPLAY uses token zero to begin bounded work and echoes it to resume.
 * HISTORY_RELEASE requires progress_token zero and detaches in one work unit. */

typedef struct FlarkV4CancelRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t progress_token;
  uint64_t reserved[4];
} FlarkV4CancelRequest;
/* BEGIN requires progress_token == NONE. PUMP and FINISH require the latest
 * nonzero close token. FINISH atomically consumes the sole session handle. */

typedef struct FlarkV4OwnerTransferRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t new_owner_token;
  uint64_t reserved[4];
} FlarkV4OwnerTransferRequest;
typedef struct FlarkV4InspectRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t reserved[5];
} FlarkV4InspectRequest;
typedef struct FlarkV4SessionInspection {
  uint32_t struct_size;
  FlarkV4SessionState session_state;
  FlarkV4SessionHandle session;
  FlarkV4Revision revision;
  uint32_t live_transactions;
  uint32_t live_continuations;
  uint32_t live_anchors;
  uint32_t live_history_tokens;
  uint64_t reserved[3];
} FlarkV4SessionInspection;
FlarkV4StatusCode flark_v4_anchor_transform(const FlarkV4AnchorRequest *request, FlarkV4Outcome *outcome);
FlarkV4StatusCode flark_v4_anchor_resolve(const FlarkV4AnchorRequest *request, FlarkV4Outcome *outcome);
FlarkV4StatusCode flark_v4_anchor_release(const FlarkV4AnchorRequest *request, FlarkV4Outcome *outcome);
FlarkV4StatusCode flark_v4_cancel(const FlarkV4CancelRequest *request, FlarkV4Outcome *outcome);
FlarkV4StatusCode flark_v4_session_transfer_owner(const FlarkV4OwnerTransferRequest *request, FlarkV4Outcome *outcome);
FlarkV4StatusCode flark_v4_session_inspect(const FlarkV4InspectRequest *request, FlarkV4SessionInspection *inspection, FlarkV4Outcome *outcome);