packages/flark_core/lib/src/native/bindings.dart


@Native<_AnchorNative>(symbol: 'flark_v4_anchor_transform')
external int _nativeAnchorTransform(
  Pointer<FlarkV4AnchorRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_AnchorNative>(symbol: 'flark_v4_anchor_resolve')
external int _nativeAnchorResolve(
  Pointer<FlarkV4AnchorRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_AnchorNative>(symbol: 'flark_v4_anchor_release')
external int _nativeAnchorRelease(
  Pointer<FlarkV4AnchorRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_CancelNative>(symbol: 'flark_v4_cancel')
external int _nativeCancel(
  Pointer<FlarkV4CancelRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_OwnerTransferNative>(symbol: 'flark_v4_session_transfer_owner')
external int _nativeSessionTransferOwner(
  Pointer<FlarkV4OwnerTransferRequest> request,
  Pointer<FlarkV4Outcome> outcome,
);

@Native<_SessionInspectNative>(symbol: 'flark_v4_session_inspect')
external int _nativeSessionInspect(
  Pointer<FlarkV4InspectRequest> request,
  Pointer<FlarkV4SessionInspection> inspection,
  Pointer<FlarkV4Outcome> outcome,
);
